HelloUltraviolet/Fixtures/RejectedSource/Expressions/FieldVisibility/Expected.uv
//! Expected diagnostic metadata for the FieldVisibility rejected-source specimen.

expectedDiagnostic("E-TYP-1905", "def.16.FieldVisibility")
